...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".ui.detailTvShow.DetailTvShowActivity">

    <ImageView
        android:id="@+id/showBackdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tv_show_backdrop" />

    <ImageButton
        android:id="@+id/btnBackPage02"
        android:background="@null"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_baseline_arrow_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showTopTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/temp_title"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/showPoster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/tv_show_poster"
                android:scaleType="centerCrop"
                android:src="@color/amber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/showTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:maxLines="2"
                android:text="@string/temp_title"
...
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/showPoster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <ImageButton
                android:id="@+id/btnFavoriteshow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
...
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toTopOf="@+id/title_01"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/showReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/temp_date"
...
                android:contentDescription="@string/icon_dot"
                android:src="@drawable/ic_baseline_dot_grey"
                app:layout_constraintStart_toEndOf="@+id/showReleaseDate"
                app:layout_constraintTop_toBottomOf="@+id/showTitle" />

            <TextView
                android:id="@+id/showDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/temp_duration"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/showTitle" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/showRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:max="5"
...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/titleBar02"
                app:layout_constraintTop_toBottomOf="@+id/genresContainer" />

            <TextView
                android:id="@+id/showSinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/temp_sinopsis"
...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/titleBar02"
                app:layout_constraintTop_toBottomOf="@+id/showSinopsis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_seasonDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
...
